--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
-
-*{
+* {
     font-family: 'Courier New', Courier, monospace;
 }
 
 body {
-    background-color: gray;
+    background-color: #718bff;
 }
 
 img {
@@ -25,23 +24,23 @@ img {
 
 .description {
     font-size: 26px;
-    font-weight: bold; 
+    font-weight: bold;
 }
 
 .city {
     background-color: #718bff;
     border-radius: 15px;
-    padding: 30px;   
+    padding: 30px;
 }
 
 .temp {
     background-color: #718bff;
     border-radius: 15px;
-    padding: 30px;   
+    padding: 30px;
 }
 
 .feels_like {
     background-color: #718bff;
     border-radius: 15px;
-    padding: 30px;   
+    padding: 30px;
 }
